--- a/index.html
+++ b/index.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Meatsite</title>
+    <link rel="stylesheet" href="style.css" >
+    
 </head>
 <body>
-    <h1>こんにちは！</h1>
-    <p>ささみです！</p>
+<header class="top">
+    <div class="top-text">
+    <h1>How Different<br> The Part Of Meat</h1>
+</div>
+<div class="bg-fixed">
+<h2>click me!</h2>
+</div>
+<div class="top-icon-container">
+    <div class="top-icon">
+    <img src="material/icon_cow.svg" width="400px">
+    <img src="material/icon_chicken.svg"width="400px">
+    <img src="material/icon_pig.svg"width="400px">
+</div>
+</div>
+</header>
 </body>
 </html>
