--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="JP">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -14,7 +14,8 @@
     <h1>How Different<br> The Part Of Meat</h1>
 </div>
 <div class="bg-fixed">
-<h2>click me!</h2>
+<!-- <h2>click me!</h2> -->
+<img src="/material/bg_clickme.png" class="bg_clickme">
 </div>
 <div class="top-icon-container">
     <div class="top-icon">
@@ -24,5 +25,65 @@
 </div>
 </div>
 </header>
+<section class="body">
+    <nav>
+        <img src="/material/nav_chicken.png" class="nax_animal">
+        <img src="/material/nav_top.png" class="nav_top">
+    </nav>
+
+    <div class="part">
+        <img src="/material/part_chicken.png" class="part_ai">
+    </div>
+
+    <div class="cook">
+         <div class="cook_container">
+        <div class="cook_contents">
+        <img src="/img/tori_sasami.jpg" width="400px" class="contents_img">
+        <div class="sasami_text">
+        <h3>ささみ</h3>
+        <h4>脂肪が少なく食感が柔らかい</h4>
+        <h5>オススメ</h5>
+    </div>
+    </div>
+    <div class="cook_contents">
+        <div class="sasami_text">
+        <h3>むね</h3>
+        <h4>脂肪が少なく加熱するとパサつく</h4>
+        <h5>オススメ</h5>
+    </div>
+    <img src="/img/tori_mune.jpg" width="400px" class="contents_img">
+    </div>
+    <div class="cook_contents">
+        <img src="/img/tori_momo.jpg" width="400px" class="contents_img">
+        <div class="sasami_text">
+        <h3>もも</h3>
+        <h4>適度なコクと脂肪あり</h4>
+        <h5>オススメ</h5>
+    </div>
+    </div>
+</div>
+    </div>
+    <div class="big3">
+        <img src="/material/japan.png" class="japan">
+    </div>
+
+    <div class="eatery">
+        <div class="eatery_contents">
+        <img src="/img/tori_hinai.jpg" width="400px" class="contents_img">
+        <h6>比内地鶏</h6>
+    </div>
+    <div class="eatery_contents">
+        <img src="/img/tori_nagoya.jpg" width="400px" class="contents_img">
+        <h6>名古屋コーチン</h6>
+    </div>
+    <div class="eatery_contents">
+        <img src="/img/tori_satsuma.jpg" width="400px" class="contents_img">
+        <h6>薩摩地鶏</h6>
+    </div>
+    </div>
+
+
+</section>
+<footer><h6>&copy; SASAMI</h6></footer>
 </body>
 </html>
