兄弟要素以外にどうhoverをかけるか

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <h1>How Different<br> The Part Of Meat</h1>
 </div>
 <div class="bg-fixed">
-<!-- <h2>click me!</h2> -->
 <img src="/material/bg_clickme.png" class="bg_clickme">
 </div>
 <div class="top-icon-container">
@@ -36,29 +35,41 @@
     </div>
 
     <div class="cook">
-         <div class="cook_container">
+    <div class="cook_container">
+
         <div class="cook_contents">
-        <img src="/img/tori_sasami.jpg" width="400px" class="contents_img">
+
+              <div class="cook_img1">
+                <a  href="https://cookpad.com/recipe/3253102">
+                    <img class="img_size" src="/img/tori_kobu.jpg" width="400px" height="300px">
+                    <img class="img_size" src="/img/tori_sasami.jpg" width="400px" height="300px"  >
+                </a>
+             </div>
+
+
         <div class="sasami_text">
         <h3>ささみ</h3>
         <h4>脂肪が少なく食感が柔らかい</h4>
         <h5>オススメ</h5>
-    </div>
-    </div>
+        <a class="button_cook" style="color:#4c4c4c;font-weight:600;" target="_blank" href="https://cookpad.com/recipe/3253102">コブサラダ</a>
+        </div>
+      </div>
     <div class="cook_contents">
         <div class="sasami_text">
         <h3>むね</h3>
         <h4>脂肪が少なく加熱するとパサつく</h4>
         <h5>オススメ</h5>
+     <a class="button_cook" style="color:#4c4c4c;font-weight:600;" target="_blank" href="https://cookpad.com/recipe/7190527">チキン南蛮</a>
     </div>
-    <img src="/img/tori_mune.jpg" width="400px" class="contents_img">
+    <img src="/img/tori_mune.jpg" width="400px" class="img_size">
     </div>
     <div class="cook_contents">
-        <img src="/img/tori_momo.jpg" width="400px" class="contents_img">
+        <img src="/img/tori_momo.jpg" width="400px" class="img_size">
         <div class="sasami_text">
         <h3>もも</h3>
         <h4>適度なコクと脂肪あり</h4>
         <h5>オススメ</h5>
+      <a class="button_cook" style="color:#4c4c4c;font-weight:600;" target="_blank" href="https://cookpad.com/recipe/7191673">チキンソテー</a>
     </div>
     </div>
 </div>
@@ -69,15 +80,16 @@
 
     <div class="eatery">
         <div class="eatery_contents">
-        <img src="/img/tori_hinai.jpg" width="400px" class="contents_img">
+        <img src="/img/tori_hinai.jpg" width="400px" class="img_size">
         <h6>比内地鶏</h6>
+        
     </div>
     <div class="eatery_contents">
-        <img src="/img/tori_nagoya.jpg" width="400px" class="contents_img">
+        <img src="/img/tori_nagoya.jpg" width="400px" class="img_size">
         <h6>名古屋コーチン</h6>
     </div>
     <div class="eatery_contents">
-        <img src="/img/tori_satsuma.jpg" width="400px" class="contents_img">
+        <img src="/img/tori_satsuma.jpg" width="400px" class="img_size">
         <h6>薩摩地鶏</h6>
     </div>
     </div>
