--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="JP">
 <head>
     <meta charset="UTF-8">
+    <mate name="viewport" content="width device-width, initial-scale = 1.0, minimum-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meatsite</title>
@@ -26,6 +27,7 @@
 
 <div class="bg-fixed">
     <img src="/material/bg_clickme.png" class="bg_clickme">
+    <div class="bg_clickme"></div>
     </div>
 
     <div id="section-scroller-button">
