--- a/chicken.html
+++ b/chicken.html
@@ -2,6 +2,7 @@
 <html lang="JP">
 <head>
     <meta charset="UTF-8">
+    <mate name="viewport" content="width device-width, initial-scale = 1.0, minimum-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
@@ -10,6 +11,7 @@
     <script src="main.js"></script>
 </head>
 <body>
+    <div class="wrap">
     <section class="body">
         <nav>
             <img src="/material/nav_chicken.png" class="nax_animal">
@@ -37,20 +39,22 @@
             <div class="sasami_text">
             <h3>ささみ</h3>
             <h4>脂肪が少なく食感が柔らかい</h4>
+            <div class="cook_text_center">
             <h5>オススメ</h5>
             <a class="button_cook" style="color:#4c4c4c;font-weight:600;" target="_blank" href="https://cookpad.com/recipe/3253102">コブサラダ</a>
-            </div>
+        </div></div>
           </div></div>
 
 
         <div class="cook_contents fadein">
-            <div class="cook_center">
+            <div class="cook_center reverse">
             <div class="sasami_text">
             <h3>むね</h3>
             <h4>脂肪が少なく加熱するとパサつく</h4>
+            <div class="cook_text_center">
             <h5>オススメ</h5>
          <a class="button_cook" style="color:#4c4c4c;font-weight:600;" target="_blank" href="https://cookpad.com/recipe/7190527">チキン南蛮</a>
-        </div>
+        </div></div>
         <div class="cook_img1">
         <a href="https://cookpad.com/recipe/7190527">
             <img src="/img/tori_nannbann.jpg" width="400px" height="300px" class="img_size">
@@ -70,9 +74,10 @@
            <div class="sasami_text">
             <h3>もも</h3>
             <h4>適度なコクと脂肪あり</h4>
+            <div class="cook_text_center">
             <h5>オススメ</h5>
           <a class="button_cook" style="color:#4c4c4c;font-weight:600;" target="_blank" href="https://cookpad.com/recipe/7191673">チキンソテー</a>
-        </div>
+        </div></div>
         </div>
     </div>
     </div>
@@ -107,6 +112,8 @@
     
     </section>
     <footer><h6>&copy; SASAMI</h6></footer>
+</div>
+
 <!-- セクションスクロール -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="js/sectionScroller.min.js" type="text/javascript"></script>
