--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body>
 <header class="top">
 
-      <div class="top-text full-height section-scroll" id="section-1-1"">
+      <div class="top-text full-height section-scroll cd-fixed-bg cd-bg-0" id="section-1-1"">
         <h1>How Different<br>The Part Of Meat</h1>
+        <a class="scroll" href="#section-1-2"><span></span>Scroll</a>
       </div>
 
-     <div class="top-icon-container full-height section-scroll" id="section-1-2"">
+     <div class="top-icon-container full-height section-scroll cd-fixed-bg cd-bg-1" id="section-1-2"">
       <ul class="top-icon fadein">
         <li><a href="cow.html"><img src="material/icon_cow.svg" width="400px"></a></li>
         <li><a href="chicken.html"><img src="/material/icon_chicken.svg" width="400px"></a></li>
@@ -25,10 +26,10 @@
       </ul>
    </div>
 
-<div class="bg-fixed">
+<!-- <div class="bg-fixed">
     <img src="/material/bg_clickme.png" class="bg_clickme">
     <div class="bg_clickme"></div>
-    </div>
+    </div> -->
 
     <div id="section-scroller-button">
 		<i class="caret"></i>
