--- a/chicken.html
+++ b/chicken.html
@@ -82,7 +82,7 @@
     </div>
     </div>
         </div>
-        <div class="big3 fadein cd-fixed-bg cd-bg-4">
+        <div class="big3 cd-fixed-bg cd-bg-4">
             <img src="/material/japan.png" class="japan">
         </div>
     
