--- a/demo.html
+++ b/demo.html
@@ -1,16 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="utf-8" />
     <link rel="stylesheet" href="demo.css">
+    <!-- <script type="text/javascript" src="Scripts/jquery-3.4.1.js"></script> -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <!-- <script src="demo.js"></script> -->
+    <title></title>
+  <style>
+   
+  </style>
+  <!-- <script type="text/javascript">
+    $(document).ready(function () {
+      $('#link_section2').on('click', function () {
+        $(window).scrollTop($('#section2').position().top);
+      });
+      $('#link_section3').on('click', function () {
+        $(window).scrollTop($('#section3').position().top);
+      });
+      $('#link_section4').on('click', function () {
+        $(window).scrollTop($('#section4').position().top);
+      });
+      $('#link_section5').on('click', function () {
+        $(window).scrollTop($('#section5').position().top);
+      });
+      $('#link_section6').on('click', function () {
+        $(window).scrollTop($('#section6').position().top);
+      });
+      $('#link_section7').on('click', function () {
+        $(window).scrollTop($('#section7').position().top);
+      });
+      $('#link_section8').on('click', function () {
+        $(window).scrollTop($('#section8').position().top);
+      });
+    });
+  </script> -->
 </head>
 <body>
-    
-    <a href="#"><span></span>Scroll</a>
-
-
+  <div id="section1" class="section">
+    Section1<br />
+    <a id="link_section2" href="javascript:void(0);">Section2</a><br/>
+    <a id="link_section3" href="javascript:void(0);">Section3</a><br/>
+    <a id="link_section4" href="javascript:void(0);">Section4</a><br/>
+    <a id="link_section5" href="javascript:void(0);">Section5</a><br/>
+    <a id="link_section6" href="javascript:void(0);">Section6</a><br/>
+    <a id="link_section7" href="javascript:void(0);">Section7</a><br/>
+    <a id="link_section8" href="javascript:void(0);">Section8</a><br/>
+  </div>
+  <div id="section2" class="section">Section2</div>
+  <div id="section3" class="section">Section3</div>
+  <div id="section4" class="section">Section4</div>
+  <div id="section5" class="section">Section5</div>
+  <div id="section6" class="section">Section6</div>
+  <div id="section7" class="section">Section7</div>
+  <div id="section8" class="section">Section8</div>
 </body>
 </html>
