--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
       <div class="top-text full-height section-scroll cd-fixed-bg cd-bg-0" id="section-1-1"">
         <h1>How Different<br>The Part Of Meat</h1>
-        <a class="scroll" href="#section-1-2"><span></span>Scroll</a>
+       <div class="scroll_center"> <a class="scroll" href="#section-1-2"><span></span></a></div>
       </div>
 
      <div class="top-icon-container full-height section-scroll cd-fixed-bg cd-bg-1" id="section-1-2"">
