--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meatsite</title>
 
-    <link rel="icon" href="favicon/favicon.ico" id="favicon">
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon-180x180.png">
+    <!-- <link rel="icon"  href="favicon/favicon.ico" id="favicon">
+<link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon-180x180.png"> -->
+<link rel="icon" href="/favicon/faviconbig.svg" type="image/svg+xml">
 
     <link rel="stylesheet" href="style.css" >
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
